--- a/src/styles/components/services.scss
+++ b/src/styles/components/services.scss
@@ -54,7 +54,7 @@
             display: block;
             width: 1em;
             height: 1em;
-            background-image: url(../img/card-flip.svg);
+            // background-image: url(../img/card-flip.svg);
             background-repeat: no-repeat;
             background-size: contain;
             position: absolute;
