add padding to process block

--- a/src/templates/components/process.pug
+++ b/src/templates/components/process.pug
@@ -1,4 +1,4 @@
-section#process.process
+section#process.process.block
 	.container.cleaner-animation
 		h2.process__title Proces czyszczenia
 		p.process__subtitle Proces czyszczenia odbywa się w 5 etapach.
