fix service image

--- a/src/templates/components/services.pug
+++ b/src/templates/components/services.pug
@@ -44,7 +44,7 @@ section.services#services.block.section.js-scroll-x-wrapper
                                 .service__front
                                     picture.service__img
                                         //- source(srcset="img/service-img-4.webp", type="image/webp")
-                                        img(src="img/car-cleaning.jpg", alt="Nadwozie")
+                                        img(src="img/room-cleaning.jpg", alt="Nadwozie")
                                     h6.service__title Sprzątanie
                                 .service__back
                                     div Kompleksowe usługi sprzątania, które obejmują czyszczenie powierzchni, odkurzanie, mycie podłóg oraz usuwanie kurzu. Zajmiemy się każdą częścią Twojego domu lub biura, zapewniając świeżość i porządek.
@@ -54,7 +54,7 @@ section.services#services.block.section.js-scroll-x-wrapper
                                 .service__front
                                     picture.service__img
                                         //- source(srcset="img/service-img-5.webp", type="image/webp")
-                                        img(src="img/room-cleaning.jpg", alt="Ochrona")
+                                        img(src="img/car-cleaning.jpg", alt="Ochrona")
                                     h6.service__title Pranie tapicerki samochodowej
                                 .service__back
                                     div Profesjonalne czyszczenie tapicerki samochodowej, które usuwa plamy, brud i nieprzyjemne zapachy, przywracając wnętrzu Twojego pojazdu świeżość. Używamy bezpiecznych środków, które nie szkodzą materiałom, zapewniając skuteczność i dbałość o detale.
