--- a/src/styles/components/services.scss
+++ b/src/styles/components/services.scss
@@ -82,10 +82,12 @@
         position: absolute;
         top: 0;
         left: 0;
+
         img {
             object-fit: cover;
             object-position: center;
             height: 100%;
+            width: 100%;
         }
     }
 
